cmake_minimum_required(VERSION 3.27)
project(Double_Point)

set(CMAKE_CXX_STANDARD 17)

add_executable(Double_Point
        "Reverse String.cpp"
        "Reverse Linked List.cpp"
        "Container With Most Water.cpp"
        "Move Zeroes.cpp"
       "3Sum.cpp"
        "Reverse String 2.cpp"
        "Two Sum 2.cpp"
        "Reverse Words in a String .cpp"

)
